src/objects/Glxy_BudgetSubmission__c.object
<CustomObject>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(TEXT(RegionCD__c)==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LockAdjustmentData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Adjustment Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LockRAWData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock RAW Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordKey__c</fullName>
        <externalId>true</externalId>
        <label>Record Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingFiscalYear__c</fullName>
        <label>Reporting Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionType__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Call</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>OMB</fullName>
                </value>
                <value>
                    <fullName>Congressional Justification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReportingFiscalYear__c</columns>
        <columns>SubmissionType__c</columns>
        <columns>RegionCD__c</columns>
        <columns>LockRAWData__c</columns>
        <columns>LockAdjustmentData__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_My_Regional_Budget_Calls</fullName>
        <columns>NAME</columns>
        <columns>ReportingFiscalYear__c</columns>
        <columns>SubmissionType__c</columns>
        <columns>RegionCD__c</columns>
        <columns>LockAdjustmentData__c</columns>
        <columns>LockRAWData__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>SubmissionType__c</field>
            <operation>equals</operation>
            <value>Budget Call</value>
        </filters>
        <label>All My Regional Budget Calls</label>
    </listViews>
    <listViews>
        <fullName>All_My_Regional_CJs</fullName>
        <columns>NAME</columns>
        <columns>ReportingFiscalYear__c</columns>
        <columns>SubmissionType__c</columns>
        <columns>RegionCD__c</columns>
        <columns>LockAdjustmentData__c</columns>
        <columns>LockRAWData__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>SubmissionType__c</field>
            <operation>equals</operation>
            <value>Congressional Justification</value>
        </filters>
        <label>All My Regional CJs</label>
    </listViews>
    <listViews>
        <fullName>All_My_Regional_OMBs</fullName>
        <columns>NAME</columns>
        <columns>ReportingFiscalYear__c</columns>
        <columns>SubmissionType__c</columns>
        <columns>RegionCD__c</columns>
        <columns>LockAdjustmentData__c</columns>
        <columns>LockRAWData__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>SubmissionType__c</field>
            <operation>equals</operation>
            <value>OMB</value>
        </filters>
        <label>All My Regional OMBs</label>
    </listViews>
    <listViews>
        <fullName>All_My_Regional_Submissions</fullName>
        <columns>NAME</columns>
        <columns>ReportingFiscalYear__c</columns>
        <columns>SubmissionType__c</columns>
        <columns>RegionCD__c</columns>
        <columns>LockAdjustmentData__c</columns>
        <columns>LockRAWData__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>All My Regional Submissions</label>
    </listViews>
    <nameField>
        <displayFormat>BudgetID-{0000}</displayFormat>
        <label>Budget Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Submission</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>GLXY_BudgetSubmissionCheckFiscalYear</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
VALUE(ReportingFiscalYear__c) &lt;&gt;  (YEAR(TODAY())-1),
VALUE(ReportingFiscalYear__c) &lt;&gt;  YEAR(TODAY()),
VALUE(ReportingFiscalYear__c) &lt;&gt;  (YEAR(TODAY())+1)
)</errorConditionFormula>
        <errorDisplayField>ReportingFiscalYear__c</errorDisplayField>
        <errorMessage>Invalid Fiscal Year Range</errorMessage>
    </validationRules>
</CustomObject>